--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>      
     <nav>     
-        <h1>Hori<span class="seo">seo</span>n</h1>   
+        <div class="logo">Hori<span class="seo">seo</span>n</div>
         <header>
             <ul>
                 <li class="header-item"><a href="#search-engine-optimization">Search Engine Optimization</a></li>
