--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <section class="benefits">
             <article class="benefit-item">
                 <h3>Lead Generation</h3>
-                <img src="./assets/images/lead-generation.png" alt="lead generation widget"/>
+                <img src="./assets/images/lead-generation.png" alt="lead generation widget icon"/>
                 <p>
                     Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
                 </p>
@@ -67,7 +67,7 @@
 
             <article class="benefit-item">
                 <h3>Cost Management</h3>
-                <img src="./assets/images/cost-management.png" alt="cost management icons"></img>
+                <img src="./assets/images/cost-management.png" alt="gear with money symbols in front"></img>
                 <p>
                     As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
                 </p>
